Fixed grid gap on repos landing page.

--- a/profiles/scitalk/themes/scitalk_theme/css/components/source-repos.css
+++ b/profiles/scitalk/themes/scitalk_theme/css/components/source-repos.css
@@ -33,6 +33,9 @@
 }
 /* Full view mode */
 
+.visit-repo-button {
+  margin-top: 1em;
+}
 .visit-repo-button strong:after {
   content: '';
   display: inline-block;
